--- a/config/config_svm.yaml
+++ b/config/config_svm.yaml
@@ -20,7 +20,7 @@ tokenizer:
 text_embedding:
   type: pretrained #có 3 loại, pretrained, tf_idf, count_vec
   add_new_token: False
-  text_encoder: vinai/phobert-base
+  text_encoder: MoritzLaurer/mDeBERTa-v3-base-xnli-multilingual-nli-2mil7
   freeze: False
   use_lora: False
   # lora_target_modules: ["q", ".k", "v", ".o", "wi_0", "wi_1", "wo"]
@@ -44,7 +44,7 @@ train:
   patience: 5
   learning_rate: 2.0e-5
   weight_decay: 0.0
-  metric_for_best_model: f1
+  metric_for_best_model: accuracy
   per_device_train_batch_size: 16
   per_device_valid_batch_size: 16
 
