--- a/config/config_svm.yaml
+++ b/config/config_svm.yaml
@@ -9,7 +9,7 @@ svm:
   gamma: 0.1
   degree: 2
   r: 1
-  kernel_type: custom
+  kernel_type: linear
 
 tokenizer:
   padding: max_length
@@ -20,7 +20,7 @@ tokenizer:
 text_embedding:
   type: pretrained #có 3 loại, pretrained, tf_idf, count_vec
   add_new_token: False
-  text_encoder: google-bert/bert-base-uncased
+  text_encoder: distilbert/distilbert-base-uncased
   freeze: False
   use_lora: False
   # lora_target_modules: ["q", ".k", "v", ".o", "wi_0", "wi_1", "wo"]
