--- a/config/config_svm.yaml
+++ b/config/config_svm.yaml
@@ -3,13 +3,13 @@ data:
   train_dataset: train.csv
   val_dataset: dev.csv
   test_dataset: test.csv
-  use_id: False # nếu set là True thì có sử dụng thông tin id, ngược lại thì không
+  use_id: False  # If True, use ID information; if False, ignore ID
 
 svm:
-  gamma: 0.1
-  degree: 2
-  r: 1
-  kernel_type: linear
+  gamma: 0.1  # Only used for rbf, poly, sigmoid kernels
+  degree: 2   # Only used for polynomial kernel
+  r: 1        # Only used for poly, sigmoid kernels
+  kernel_type: linear  # Options: linear, rbf, poly, sigmoid
 
 tokenizer:
   padding: max_length
@@ -18,18 +18,18 @@ tokenizer:
   return_attention_mask: True
 
 text_embedding:
-  type: pretrained #có 3 loại, pretrained, tf_idf, count_vec
+  type: pretrained  # Options: pretrained, tf_idf, count_vec
   add_new_token: False
   text_encoder: distilbert/distilbert-base-uncased
   freeze: False
   use_lora: False
-  # lora_target_modules: ["q", ".k", "v", ".o", "wi_0", "wi_1", "wo"]
-  lora_target_modules: ["q", "v"]
+  # LoRA configs (only used when use_lora: True)
+  lora_target_modules: ["q", "v"]  # Common: ["q", "k", "v", "o"] for attention
   lora_r: 8
   lora_alpha: 16
   lora_dropout: 0.05
-  d_features: 768
-  d_model: 512
+  d_features: 768  # DistilBERT hidden size
+  d_model: 512     # Project to this dimension
   dropout: 0.2
 
 model:
@@ -45,9 +45,9 @@ train:
   learning_rate: 2.0e-5
   weight_decay: 0.0
   metric_for_best_model: accuracy
-  per_device_train_batch_size: 16
-  per_device_valid_batch_size: 16
+  per_device_train_batch_size: 32
+  per_device_valid_batch_size: 32
 
 inference:
-  test_dataset: data/test.csv
+  test_dataset: data/test.csv  # Should match data.test_dataset path
   batch_size: 64
