--- a/requirements.txt
+++ b/requirements.txt
@@ -122,6 +122,7 @@ ruamel.yaml.clib==0.2.6
 sacremoses==0.0.47
 scikit-learn==0.23.2
 scipy==1.7.3
+xgboost==1.7.3
 scmrepo==0.0.7
 Send2Trash==1.8.0
 shortuuid==1.0.8
