--- a/requirements.txt
+++ b/requirements.txt
@@ -144,6 +144,7 @@ tornado==6.1
 tqdm==4.62.3
 traitlets==5.1.1
 transformers==4.15.0
+peft==0.6.0
 typing-extensions==4.0.1
 urllib3==1.26.8
 voluptuous==0.12.2
