--- a/config/config_t5.yaml
+++ b/config/config_t5.yaml
@@ -14,7 +14,7 @@ tokenizer:
 text_embedding:
   type: pretrained #có 3 loại, pretrained, tf_idf, count_vec
   add_new_token: False
-  text_encoder: VietAI/vit5-base
+  text_encoder: google/flan-t5-base
   freeze: False
   use_lora: False
   # lora_target_modules: ["q", ".k", "v", ".o", "wi_0", "wi_1", "wo"]
