--- a/config/config_cnn.yaml
+++ b/config/config_cnn.yaml
@@ -7,24 +7,23 @@ data:
 
 tokenizer:
   padding: max_length
-  max_length: 128
+  max_length: 512      # Tăng cho NLI task
   truncation: True
   return_attention_mask: True
 
 text_embedding:
   type: pretrained #có 3 loại, pretrained, tf_idf, count_vec
   add_new_token: False
-  text_encoder: vinai/phobert-base
+  text_encoder: microsoft/deberta-v3-base  # Best for NLI
   freeze: False
-  use_lora: False
-  # lora_target_modules: ["q", ".k", "v", ".o", "wi_0", "wi_1", "wo"]
-  lora_target_modules: ["q", "v"]
-  lora_r: 8
-  lora_alpha: 16
-  lora_dropout: 0.05
+  use_lora: True       # Enable LoRA để tiết kiệm memory
+  lora_target_modules: ["query_proj", "value_proj", "key_proj"]  # DeBERTa modules
+  lora_r: 16           # Tăng rank
+  lora_alpha: 32       # Tăng alpha
+  lora_dropout: 0.1
   d_features: 768
   d_model: 512
-  dropout: 0.2
+  dropout: 0.1         # Giảm dropout
 
 attention:
   layers: 4
@@ -44,25 +43,25 @@ multi_encoder:
 
 uni_encoder:
   d_model: 512
-  layers: 4
+  layers: 3            # Giảm để tránh overfitting
 
 model:
   type_model: cnn
   intermediate_dims: 512
-  hidden_dim: 32
-  dropout: 0.2
+  hidden_dim: 128      # Tăng từ 32 → 128
+  dropout: 0.1         # Giảm dropout
 
 train:
   output_dir: checkpoint
   seed: 12345
-  num_train_epochs: 100
-  patience: 5
-  learning_rate: 2.0e-5
+  num_train_epochs: 50  # Giảm epochs
+  patience: 7          # Tăng patience
+  learning_rate: 1.0e-5 # Giảm LR cho DeBERTa
   weight_decay: 0.01
   metric_for_best_model: f1
-  per_device_train_batch_size: 64
-  per_device_valid_batch_size: 64
+  per_device_train_batch_size: 16  # Giảm batch size
+  per_device_valid_batch_size: 16
 
 inference:
   test_dataset: /content/data/test.csv
-  batch_size: 1024
+  batch_size: 64
