--- a/config/config_cnn.yaml
+++ b/config/config_cnn.yaml
@@ -7,23 +7,23 @@ data:
 
 tokenizer:
   padding: max_length
-  max_length: 512      # Tăng cho NLI task
+  max_length: 256      # Giảm xuống để ổn định memory
   truncation: True
   return_attention_mask: True
 
 text_embedding:
   type: pretrained #có 3 loại, pretrained, tf_idf, count_vec
   add_new_token: False
-  text_encoder: microsoft/deberta-v3-base  # Best for NLI
+  text_encoder: vinai/phobert-base  # Stable choice, switch back to PhoBERT
   freeze: False
-  use_lora: True       # Enable LoRA để tiết kiệm memory
-  lora_target_modules: ["query_proj", "value_proj", "key_proj"]  # DeBERTa modules
-  lora_r: 16           # Tăng rank
-  lora_alpha: 32       # Tăng alpha
+  use_lora: False      # Tắt LoRA tạm thời để test
+  lora_target_modules: ["query", "value", "key"]  # BERT/RoBERTa modules
+  lora_r: 16           
+  lora_alpha: 32       
   lora_dropout: 0.1
   d_features: 768
   d_model: 512
-  dropout: 0.1         # Giảm dropout
+  dropout: 0.1
 
 attention:
   layers: 4
@@ -54,13 +54,13 @@ model:
 train:
   output_dir: checkpoint
   seed: 12345
-  num_train_epochs: 50  # Giảm epochs
-  patience: 7          # Tăng patience
-  learning_rate: 1.0e-5 # Giảm LR cho DeBERTa
+  num_train_epochs: 50  
+  patience: 7          
+  learning_rate: 2.0e-5 # PhoBERT learning rate
   weight_decay: 0.01
   metric_for_best_model: f1
-  per_device_train_batch_size: 16  # Giảm batch size
-  per_device_valid_batch_size: 16
+  per_device_train_batch_size: 8   # Giảm thêm để ổn định
+  per_device_valid_batch_size: 8
 
 inference:
   test_dataset: /content/data/test.csv
