--- a/config/config_pretrained_nli.yaml
+++ b/config/config_pretrained_nli.yaml
@@ -7,22 +7,22 @@ data:
 
 tokenizer:
   padding: max_length
-  max_length: 512
+  max_length: 1024     # Tăng context length cho long documents
   truncation: True
   return_attention_mask: True
 
 text_embedding:
   type: pretrained
   add_new_token: False
-  text_encoder: MoritzLaurer/mDeBERTa-v3-base-mnli-xnli  # Pre-trained for NLI!
+  text_encoder: MoritzLaurer/mDeBERTa-v3-large-mnli-fever-anli-ling-wanli  # Large model!
   freeze: False
-  use_lora: False
+  use_lora: True       # Enable LoRA để handle large model efficiently
   lora_target_modules: ["query_proj", "key_proj", "value_proj"]  # DeBERTa modules
-  lora_r: 8
-  lora_alpha: 16
+  lora_r: 16           # Tăng rank cho large model
+  lora_alpha: 32       # Tăng alpha
   lora_dropout: 0.1
-  d_features: 768
-  d_model: 768  # Keep original dimension
+  d_features: 1024     # DeBERTa-large hidden size
+  d_model: 1024        # Keep original dimension
   dropout: 0.1
 
 model:
@@ -32,14 +32,15 @@ model:
 train:
   output_dir: checkpoint
   seed: 12345
-  num_train_epochs: 10  # Fewer epochs since pre-trained
-  patience: 3
-  learning_rate: 1.0e-5  # Lower LR for pre-trained
+  num_train_epochs: 5   # Ít epochs hơn vì large model
+  patience: 2           # Patience thấp hơn
+  learning_rate: 5.0e-6 # LR thấp hơn cho large model
   weight_decay: 0.01
   metric_for_best_model: f1
-  per_device_train_batch_size: 8   # Conservative for 512 tokens
-  per_device_valid_batch_size: 8
+  per_device_train_batch_size: 2   # Batch size nhỏ cho 1024 tokens + large model
+  per_device_valid_batch_size: 2
+  gradient_accumulation_steps: 8    # Compensate for small batch size
 
 inference:
   test_dataset: data/test.csv
-  batch_size: 32
+  batch_size: 4         # Small batch cho inference
