--- a/config/config_pretrained_nli_balanced.yaml
+++ b/config/config_pretrained_nli_balanced.yaml
@@ -14,15 +14,15 @@ tokenizer:
 text_embedding:
   type: pretrained
   add_new_token: False
-  text_encoder: MoritzLaurer/mDeBERTa-v3-large-mnli-fever-anli-ling-wanli  # Large but not XL
+  text_encoder: microsoft/deberta-v3-base  # Base model
   freeze: False
   use_lora: True       # Enable LoRA for efficiency
   lora_target_modules: ["query_proj", "key_proj", "value_proj"]
   lora_r: 16
   lora_alpha: 32
   lora_dropout: 0.1
-  d_features: 1024     # DeBERTa-large hidden size
-  d_model: 1024
+  d_features: 768      # DeBERTa-base hidden size
+  d_model: 768
   dropout: 0.1
 
 model:
@@ -32,15 +32,15 @@ model:
 train:
   output_dir: checkpoint
   seed: 12345
-  num_train_epochs: 8   # Moderate epochs
-  patience: 3
-  learning_rate: 8.0e-6 # Balanced LR
+  num_train_epochs: 12  # More epochs cho base model
+  patience: 4
+  learning_rate: 2.0e-5 # Standard LR cho base model
   weight_decay: 0.01
   metric_for_best_model: f1
-  per_device_train_batch_size: 4   # Balanced batch size
-  per_device_valid_batch_size: 4
-  gradient_accumulation_steps: 4    # Effective batch size = 16
+  per_device_train_batch_size: 8   # Good batch size cho base
+  per_device_valid_batch_size: 8
+  gradient_accumulation_steps: 4   # Effective batch size = 32
 
 inference:
   test_dataset: data/test.csv
-  batch_size: 8
+  batch_size: 16
