--- a/config/config_svm.yaml
+++ b/config/config_svm.yaml
@@ -6,10 +6,10 @@ data:
   use_id: False  # If True, use ID information; if False, ignore ID
 
 svm:
-  gamma: 0.1  # Only used for rbf, poly, sigmoid kernels
-  degree: 2   # Only used for polynomial kernel
-  r: 1        # Only used for poly, sigmoid kernels
-  kernel_type: linear  # Options: linear, rbf, poly, sigmoid
+  gamma: 0.01  # Optimized for rbf, poly, sigmoid kernels (lower = smoother)
+  degree: 3    # Optimized for polynomial kernel 
+  r: 0.5       # Optimized for poly, sigmoid kernels
+  kernel_type: rbf  # RBF usually performs better than linear for NLI
 
 tokenizer:
   padding: max_length
@@ -20,17 +20,17 @@ tokenizer:
 text_embedding:
   type: pretrained  # Options: pretrained, tf_idf, count_vec
   add_new_token: False
-  text_encoder: distilbert/distilbert-base-uncased
+  text_encoder: MoritzLaurer/ModernBERT-base-zeroshot-v2.0  # Better base model for NLI
   freeze: False
-  use_lora: False
+  use_lora: False   # Enable LoRA for better fine-tuning
   # LoRA configs (only used when use_lora: True)
-  lora_target_modules: ["q", "v"]  # Common: ["q", "k", "v", "o"] for attention
-  lora_r: 8
-  lora_alpha: 16
-  lora_dropout: 0.05
-  d_features: 768  # DistilBERT hidden size
+  lora_target_modules: ["query_proj", "value_proj"]  # DeBERTa specific
+  lora_r: 16       # Higher rank for better performance
+  lora_alpha: 32   # 2x lora_r
+  lora_dropout: 0.1
+  d_features: 768  # DeBERTa-base hidden size
   d_model: 512     # Project to this dimension
-  dropout: 0.2
+  dropout: 0.1     # Lower dropout
 
 model:
   type_model: svm
@@ -40,13 +40,14 @@ model:
 train:
   output_dir: checkpoint
   seed: 12345
-  num_train_epochs: 100
-  patience: 5
-  learning_rate: 2.0e-5
-  weight_decay: 0.0
+  num_train_epochs: 50    # Reduced epochs for SVM
+  patience: 8            # More patience for SVM convergence
+  learning_rate: 1.0e-4  # Higher LR for SVM kernel learning
+  weight_decay: 1.0e-4   # Small weight decay for regularization
   metric_for_best_model: accuracy
-  per_device_train_batch_size: 32
+  per_device_train_batch_size: 16  # Smaller batch for stable gradient
   per_device_valid_batch_size: 32
+  gradient_accumulation_steps: 2   # Effective batch = 16*2 = 32
 
 inference:
   test_dataset: data/test.csv  # Should match data.test_dataset path
