--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "catboost>=1.2.8",
     "dotenv>=0.9.9",
     "genai>=2.1.0",
+    "gensim>=4.3.0",
     "ipykernel>=6.30.1",
     "langchain>=0.3.27",
     "langchain-google-genai>=2.1.9",
@@ -22,6 +23,7 @@ dependencies = [
     "py-dotenv>=0.1",
     "pydantic>=2.11.7",
     "scikit-learn>=1.7.1",
+    "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "sentence-transformers>=5.1.0",
     "spacy>=3.8.7",
@@ -30,4 +32,10 @@ dependencies = [
     "transformers>=4.55.2",
     "underthesea>=6.8.4",
     "xgboost>=3.0.4",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
 ]
