--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "catboost>=1.2.8",
+    "datasets>=4.0.0",
     "dotenv>=0.9.9",
     "genai>=2.1.0",
     "gensim>=4.3.0",
