--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,8 @@ dependencies = [
     "spacy>=3.8.7",
     "textstat>=0.7.8",
     "torch>=2.8.0",
+    "torchsummary>=1.5.1",
+    "torchtext>=0.18.0",
     "transformers>=4.55.2",
     "underthesea>=6.8.4",
     "xgboost>=3.0.4",
